--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
     <TextView
         android:id="@+id/textView3"
         style="@style/subtitle_bold"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/subtitle_bold"
@@ -54,7 +55,7 @@
         android:layout_width="75dp"
         android:layout_height="75dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="35dp"
         android:background="@drawable/hamburguer"
         android:backgroundTint="#FFFFFF"
         android:contentDescription="@string/hamburguer"
@@ -62,7 +63,7 @@
         app:layout_constraintEnd_toStartOf="@+id/btnChicken"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
         app:srcCompat="@drawable/hamburguer" />
 
     <ImageButton
@@ -191,7 +192,8 @@
 
         app:layout_constraintBottom_toBottomOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView4" />
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        android:focusable="true" />
 
     <TextView
         android:id="@+id/textView10"
@@ -216,13 +218,15 @@
         android:textAppearance="@style/see_more"
         app:layout_constraintBottom_toBottomOf="@+id/textView10"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView10" />
+        app:layout_constraintTop_toTopOf="@+id/textView10"
+        android:focusable="true" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/stores_recycle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/btnVerMasLocales"
         app:layout_constraintStart_toStartOf="@+id/recommendation_recycler"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
