--- a/app/src/main/res/layout/activity_stores.xml
+++ b/app/src/main/res/layout/activity_stores.xml
@@ -10,6 +10,7 @@
         android:id="@+id/stores_recycler_full"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="259dp"
-        tools:layout_editor_absoluteY="184dp" />
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="259dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
