--- a/app/src/main/res/menu/menu_inicio_sesion.xml
+++ b/app/src/main/res/menu/menu_inicio_sesion.xml
@@ -7,7 +7,14 @@
         android:title="@string/perfil" />
     <item
         android:id="@+id/nav_nosotros"
-        android:title="@string/nosotros" />
+        android:title="@string/nosotros"></item>
+    <item android:title="@string/consultas">
+        <menu>
+            <item
+                android:id="@+id/nav_listados"
+                android:title="@string/listados" />
+        </menu>
+    </item>
     <item
         android:id="@+id/nav_recomendaciones"
         android:title="@string/recomendaciones" />
