--- a/app/src/main/res/menu/menu_inicio_sesion.xml
+++ b/app/src/main/res/menu/menu_inicio_sesion.xml
@@ -22,8 +22,13 @@
         android:id="@+id/nav_locales"
         android:title="@string/locales" />
     <item
-        android:id="@+id/nav_carrito"
+        android:id="@+id/nav_caja"
         android:icon="@drawable/ic_canasta"
+        android:title="@string/nav_caja"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/nav_carrito"
+        android:icon="@drawable/ic_baseline_shopping_cart_24"
         android:title="@string/carrito"
         app:showAsAction="ifRoom" />
     <item
