--- a/app/src/main/res/layout/fragment_reporte.xml
+++ b/app/src/main/res/layout/fragment_reporte.xml
@@ -5,8 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.ReporteFragment">
 
-    <ListView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/lvReporte"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </FrameLayout>
